to enhance the translation for I18n

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -17,6 +17,11 @@ en:
   "Projects": "Projects"
   "dashboard": "Dashboard"
   "required_icon": "Required"
+  "breadcrumb|show": "Show"
+  "breadcrumb|applied": "Applied"
+  "breadcrumb|how_to_upload": "How to upload?"
+  "breadcrumb|not_found": "Not found page"
+  "breadcrumb|rescue": "Rescue"
   "breadcrumb|vcs_access": "VCS Access"
   "breadcrumb|my_projects": "My Projects"
   "breadcrumb|login": "Login"
@@ -37,6 +42,8 @@ en:
   "breadcrumb|sympa": "Sympa"
   "breadcrumb|member_edit": "Member Control"
   "breadcrumb|reviews": "Survey"
+  "breadcrumb|search": "Search"
+  "breadcrumb|openfoundry": "OpenFoundry"
   "breadcrumb|files": "Files"
   "User|Login": "Login"
   "User|Email": "Email Address"
@@ -105,43 +112,47 @@ en:
   "BETA": "Beta"
   "MATURE": "Mature"
   "STANDARD": "Standard"
-  "url_link_for_OSI: Academic Free License": ""
+  "url_link_for_OSI: Academic Free License": "http://www.openfoundry.org/licenses/753"
   "url_link_for_OSI: GNU Affero General Public License v3 (AGPL3)": "http://www.opensource.org/licenses/agpl-v3.html"
   "url_link_for_OSI: Adaptive Public License": "http://www.opensource.org/licenses/apl1.0.php"
-  "url_link_for_OSI: Apache License 2.0": "http://www.openfoundry.org/en/Law-and-Policy/Licenses/Aapache-2.0.html"
-  "url_link_for_OSI: Artistic License 2.0": "http://www.opensource.org/licenses/artistic-license-2.0.php"
+  "url_link_for_OSI: Apache License 2_0": "http://www.openfoundry.org/licenses/29"
+  "url_link_for_OSI: Artistic License 2_0": "http://www.openfoundry.org/licenses/30"
   "url_link_for_OSI: Attribution Assurance Licenses": "http://www.opensource.org/licenses/attribution.php"
-  "url_link_for_OSI: BSD License (New and Simplified BSD License)": ""
-  "url_link_for_OSI: Boost Software License (BSL1.0)": "http://www.opensource.org/licenses/bsl1.0.html"
-  "url_link_for_OSI: Common Development and Distribution License (CDDL)": "http://www.opensource.org/licenses/cddl1.php"
-  "url_link_for_OSI: Common Public Attribution License 1.0 (CPAL)": "http://www.opensource.org/licenses/cpal_1.0"
-  "url_link_for_OSI: Common Public License 1.0": "http://www.openfoundry.org/en/Law-and-Policy/Licenses/CPL.html"
-  "url_link_for_OSI: Eclipse Public License": "http://www.opensource.org/licenses/eclipse-1.0.php"
-  "url_link_for_OSI: Educational Community License 2.0": "http://www.opensource.org/licenses/ecl2.php"
-  "url_link_for_OSI: Eiffel Forum License 2.0": "http://www.opensource.org/licenses/ver2_eiffel.php"
+  "url_link_for_OSI: BSD License (New and Simplified BSD License)": "http://www.openfoundry.org/licenses/31"
+  "url_link_for_OSI: Boost Software License (BSL1_0)": "http://www.opensource.org/licenses/bsl1.0.html"
+  "url_link_for_OSI: Common Development and Distribution License (CDDL)": "http://www.openfoundry.org/licenses/2061-cddl" 
+  "url_link_for_OSI: Common Public Attribution License 1_0 (CPAL)": "http://www.opensource.org/licenses/cpal_1.0"
+  "url_link_for_OSI: Common Public License 1_0": "http://www.openfoundry.org/licenses/754" 
+  "url_link_for_OSI: Eclipse Public License": "http://www.openfoundry.org/licenses/2062-cpl-and-epl"
+  "url_link_for_OSI: Educational Community License 2_0": "http://www.opensource.org/licenses/ecl2.php"
+  "url_link_for_OSI: Eiffel Forum License 2_0": "http://www.opensource.org/licenses/ver2_eiffel.php"
   "url_link_for_OSI: Fair License": "http://www.opensource.org/licenses/fair.php"
-  "url_link_for_OSI: GNU General Public License 2.0 (GPLv2)": ""
-  "url_link_for_OSI: GNU General Public License 3.0 (GPLv3)": "http://www.opensource.org/licenses/gpl-3.0.html"
+  "url_link_for_OSI: GNU General Public License 2_0 (GPLv2)": "http://www.openfoundry.org/licenses/32"
+  "url_link_for_OSI: GNU General Public License 3_0 (GPLv3)": "http://www.opensource.org/licenses/gpl-3.0.html"
+  "url_link_for_OSI: GNU Library or \"Lesser\" General Public License 2_1 (LGPLv2)": "http://www.openfoundry.org/licenses/755-lgpl"
+  "url_link_for_OSI: GNU Library or \"Lesser\" General Public License 3_0 (LGPLv3)": "http://www.opensource.org/licenses/lgpl-3.0.html"
   "url_link_for_OSI: ISC License": "http://www.opensource.org/licenses/isc-license.txt"
-  "url_link_for_OSI: Lucent Public License 1.02": "http://www.opensource.org/licenses/lucent1.02.php"
+  "url_link_for_OSI: Lucent Public License 1_02": "http://www.opensource.org/licenses/lucent1.02.php"
   "url_link_for_OSI: Microsoft Public License (Ms-PL)": "http://www.opensource.org/licenses/ms-pl.html"
   "url_link_for_OSI: Microsoft Reciprocal License (Ms-RL)": "http://www.opensource.org/licenses/ms-rl.html"
-  "url_link_for_OSI: MIT License": "http://www.openfoundry.org/en/Law-and-Policy/Licenses/MIT.html"
-  "url_link_for_OSI: Mozilla Public License 1.1 (MPL)": "http://www.openfoundry.org/en/Law-and-Policy/Licenses/MPL.html"
-  "url_link_for_OSI: NASA Open Source Agreement 1.3": "http://www.opensource.org/licenses/nasa1.3.php"
+  "url_link_for_OSI: MIT License": "http://www.openfoundry.org/licenses/34" 
+  "url_link_for_OSI: Mozilla Public License 1_1 (MPL)": "http://www.openfoundry.org/licenses/33"
+  "url_link_for_OSI: NASA Open Source Agreement 1_3": "http://www.opensource.org/licenses/nasa1.3.php"
   "url_link_for_OSI: NTP License": "http://www.opensource.org/licenses/ntp-license.php"
   "url_link_for_OSI: Open Group Test Suite License": "http://www.opensource.org/licenses/opengroup.php"
-  "url_link_for_OSI: Open Software License": ""
-  "url_link_for_OSI: Qt Public License (QPL)": ""
-  "url_link_for_OSI: Simple Public License 2.0": "http://www.opensource.org/licenses/simpl-2.0.html"
+  "url_link_for_OSI: Open Software License": "http://www.openfoundry.org/licenses/756-osl"
+  "url_link_for_OSI: Qt Public License (QPL)": "http://www.openfoundry.org/licenses/757-qpl"
+  "url_link_for_OSI: Simple Public License 2_0": "http://www.opensource.org/licenses/simpl-2.0.html"
   "url_link_for_OSI: Sleepycat License": "http://www.opensource.org/licenses/sleepycat.php"
   "url_link_for_OSI: University of Illinois/NCSA Open Source License": "http://www.opensource.org/licenses/UoI-NCSA.php"
-  "url_link_for_OSI: zlib/libpng License": "http://www.openfoundry.org/en/Law_and_Policy/Licenses/zlib/libpng.html"
+  "url_link_for_OSI: zlib/libpng License": "http://www.openfoundry.org/licenses/36"
   "url_link_for_GNU Free Documentation License": "http://www.fsf.org/licensing/licenses/fdl.html"
-  "url_link_for_Creative Commons: Attribution Non-commercial (by-nc)": "http://creativecommons.org/licenses/by-nc/2.5/tw/deed.en"
-  "url_link_for_Creative Commons: Attribution No Derivatives (by-nd)": "http://creativecommons.org/licenses/by-nd/2.5/tw/deed.en"
-  "url_link_for_Creative Commons: Attribution Share Alike (by-sa)": "http://creativecommons.org/licenses/by-sa/2.5/tw/deed.en"
-  "url_link_for_Creative Commons: Attribution (by)": "http://creativecommons.org/licenses/by/2.5/tw/deed.en"
+  "url_link_for_Creative Commons: Attribution Non-commercial No Derivatives (by-nc-nd)": "http://creativecommons.org/licenses/by-nc-nd/3.0/"
+  "url_link_for_Creative Commons: Attribution Non-commercial Share Alike (by-nc-sa)": "http://creativecommons.org/licenses/by-nc-sa/3.0/"
+  "url_link_for_Creative Commons: Attribution Non-commercial (by-nc)": "http://creativecommons.org/licenses/by-nc/3.0/" 
+  "url_link_for_Creative Commons: Attribution No Derivatives (by-nd)": "http://creativecommons.org/licenses/by-nd/3.0/"
+  "url_link_for_Creative Commons: Attribution Share Alike (by-sa)": "http://creativecommons.org/licenses/by-sa/3.0/"
+  "url_link_for_Creative Commons: Attribution (by)": "http://creativecommons.org/licenses/by/3.0/"
   "Public Domain": "Public Domain"
   "This project contains no code": "This project contains no code"
   "Other licenses": "Others"
@@ -219,7 +230,7 @@ en:
   "The WebSVN can't support CVS. Please use ViewVC.": "The WebSVN can't support CVS. Please use ViewVC."
   "Basic Information": "Basic Information"
   "Create Project": "Create Project"
-  "Project was successfully updated.": "Project was successfully updated."
+  "Project was successfully updated": "Project was successfully updated"
   "It may take 5 minutes for settings to take effect.": "It may take 5 minutes for settings to take effect."
   "No Operation...": "No Operation..."
   "Move User to Group": "Move User to Group"
@@ -288,7 +299,7 @@ en:
   "Requestor": "Requestor"
   "LastUpdatedBy": "New Update"
   "menu_License Wizard": "License Wizard"
-  "menu_LW_manual_link": "http://www.openfoundry.org/en/Law-and-Policy/License-Wizard/"
+  "menu_LW_manual_link": "http://www.openfoundry.org/license-wizard/"
   "License Wizard": "License Wizard"
   "menu_LW_22_link": "http://swan.iis.sinica.edu.tw/LicenseWizard2EN/LicenseWizard.cgi"
   "menu_LW_32_link": "http://swan.iis.sinica.edu.tw/LicenseWizard/index.htm?en"
@@ -386,7 +397,6 @@ en:
   "Project Basic": "Project Basic"
   "Kwiki": "WIKI"
   "Sympa": "Sympa"
-  "Subversion Access|Description": "Subversion Access Description"
   "Subversion Access|See More": "See more instruction"
   "Anonymous CVS Access": "Anonymous CVS Access"
   "Subversion: Members Only": "Subversion: Members Only"
@@ -425,7 +435,7 @@ en:
   "survey|Say something to end-users:": "Messages for Downloaders"
   "Subject": "Subject"
   "Read More": "More..."
-  "Change status": "Change Password"
+  "Change status": "Change Status"
   "rt_issue_tracker": "Issue Tracker"
   "rt_overview": "Overview"
   "rt_defect": "Defect"
@@ -555,6 +565,38 @@ en:
   "Post a Job": "Post a Job"
   "Hi": "Hi"
   "Download Now": "Download"
+  "Update User Information Successfully.": "Update User Information Successfully"
+  "Project Applied": "Your project creating request has been submitted. Please wait 72 hours for approving. We will notify you by email. <br/> If you have any questions, please contact us at "
+  Fileentity:  "Files"
   user_relation:
     no_partner: "This user has no Partner."
     no_project: "This user has no published Projects."
+  Project:
+    status: "Status"
+    name: "Name"
+    summary: "Summary"
+    description: "Description"
+    creator: "Creator"
+    statusreason: "Comment"
+    licensingdescription: "Licensing Description"
+    license: "License"
+    contentlicense: "Content License"
+    contactinfo: "Contact Information"
+    maturity: "Maturity"
+    platform: "Platform"
+    programminglanguage: "Programming Language"
+    intendedaudience: "Intended Audience"
+    rationale: "Rationale"
+    redirecturl: "Project Homepage"
+    vcs: "Version Control System"
+    vcsdescription: "Version Control System Description"
+    project_counter: "Download"
+    created_at: "Created Date"
+    updated_at: "Updated Date"
+    updated_by: "Updated by"
+    icon: "Project Icon"
+  repository:
+    use_svn_help: "This project's Subversion repository can be checked out through SVN with the following instruction set:"
+    use_cvs_help: "This project's CVS repository can be checked out through anonymous (pserver) CVS with the following instruction set:"
+  msg:
+    postrt_without_login: "You have not logged in; please log in or register from the links in the top-right corner, If you really want to submit a ticket as guest, please leave your contact information, such as email address, in the ticket body, so the developers can contact you when the issue is resolved."
