--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -17,6 +17,11 @@ zh_TW:
   "Projects": "專案"
   "dashboard": "專案管理"
   "required_icon": "必填"
+  "breadcrumb|show": "顯示"
+  "breadcrumb|applied": "Applied"
+  "breadcrumb|how_to_upload": "如何上傳檔案?"
+  "breadcrumb|not_found": "找無此頁"
+  "breadcrumb|rescue": "Rescue"
   "breadcrumb|vcs_access": "版本控制存取方式"
   "breadcrumb|my_projects": "我參與的專案"
   "breadcrumb|login": "登入"
@@ -40,6 +45,7 @@ zh_TW:
   "breadcrumb|search": "搜尋"
   "breadcrumb|openfoundry": "OpenFoundry"
   "breadcrumb|files": "files"
+  "breadcrumb|report": "新增申請單"
   "User|Login": "帳號名稱"
   "User|Email": "電子郵件"
   "User|Realname": "真實姓名"
@@ -107,43 +113,47 @@ zh_TW:
   "BETA": "試用(Beta)"
   "MATURE": "成熟(Mature)"
   "STANDARD": "標準(Standard)"
-  "url_link_for_OSI: Academic Free License": ""
+  "url_link_for_OSI: Academic Free License": "http://www.openfoundry.org/licenses/753"
   "url_link_for_OSI: GNU Affero General Public License v3 (AGPL3)": "http://www.opensource.org/licenses/agpl-v3.html"
   "url_link_for_OSI: Adaptive Public License": "http://www.opensource.org/licenses/apl1.0.php"
-  "url_link_for_OSI: Apache License 2.0": "http://www.openfoundry.org/Law-and-Policy/Licenses/Aapache-2.0.html"
-  "url_link_for_OSI: Artistic License 2.0": "http://www.opensource.org/licenses/artistic-license-2.0.php"
+  "url_link_for_OSI: Apache License 2_0": "http://www.openfoundry.org/licenses/29"
+  "url_link_for_OSI: Artistic License 2_0": "http://www.openfoundry.org/licenses/30"
   "url_link_for_OSI: Attribution Assurance Licenses": "http://www.opensource.org/licenses/attribution.php"
-  "url_link_for_OSI: BSD License (New and Simplified BSD License)": ""
-  "url_link_for_OSI: Boost Software License (BSL1.0)": "http://www.opensource.org/licenses/bsl1.0.html"
-  "url_link_for_OSI: Common Development and Distribution License (CDDL)": "http://www.openfoundry.org/Law-and-Policy/Licenses/CDDL.html"
-  "url_link_for_OSI: Common Public Attribution License 1.0 (CPAL)": "http://www.opensource.org/licenses/cpal_1.0"
-  "url_link_for_OSI: Common Public License 1.0": "http://www.openfoundry.org/Law-and-Policy/Licenses/CPL.html"
-  "url_link_for_OSI: Eclipse Public License": "http://www.opensource.org/licenses/eclipse-1.0.php"
-  "url_link_for_OSI: Educational Community License 2.0": "http://www.opensource.org/licenses/ecl2.php"
-  "url_link_for_OSI: Eiffel Forum License 2.0": "http://www.opensource.org/licenses/ver2_eiffel.php"
+  "url_link_for_OSI: BSD License (New and Simplified BSD License)": "http://www.openfoundry.org/licenses/31"
+  "url_link_for_OSI: Boost Software License (BSL1_0)": "http://www.opensource.org/licenses/bsl1.0.html"
+  "url_link_for_OSI: Common Development and Distribution License (CDDL)": "http://www.openfoundry.org/licenses/2061-cddl"
+  "url_link_for_OSI: Common Public Attribution License 1_0 (CPAL)": "http://www.opensource.org/licenses/cpal_1.0"
+  "url_link_for_OSI: Common Public License 1_0": "http://www.openfoundry.org/licenses/754"
+  "url_link_for_OSI: Eclipse Public License": "http://www.openfoundry.org/licenses/2062-cpl-and-epl"
+  "url_link_for_OSI: Educational Community License 2_0": "http://www.opensource.org/licenses/ecl2.php"
+  "url_link_for_OSI: Eiffel Forum License 2_0": "http://www.opensource.org/licenses/ver2_eiffel.php"
   "url_link_for_OSI: Fair License": "http://www.opensource.org/licenses/fair.php"
-  "url_link_for_OSI: GNU General Public License 2.0 (GPLv2)": "http://www.openfoundry.org/Law-and-Policy/Licenses/GPL.html"
-  "url_link_for_OSI: GNU General Public License 3.0 (GPLv3)": "http://www.opensource.org/licenses/gpl-3.0.html"
+  "url_link_for_OSI: GNU General Public License 2_0 (GPLv2)": "http://www.openfoundry.org/licenses/32"
+  "url_link_for_OSI: GNU General Public License 3_0 (GPLv3)": "http://www.opensource.org/licenses/gpl-3.0.html"
+  "url_link_for_OSI: GNU Library or \"Lesser\" General Public License 2_1 (LGPLv2)": "http://www.openfoundry.org/licenses/755-lgpl"
+  "url_link_for_OSI: GNU Library or \"Lesser\" General Public License 3_0 (LGPLv3)": "http://www.opensource.org/licenses/lgpl-3.0.html"
   "url_link_for_OSI: ISC License": "http://www.opensource.org/licenses/isc-license.txt"
-  "url_link_for_OSI: Lucent Public License 1.02": "http://www.opensource.org/licenses/lucent1.02.php"
+  "url_link_for_OSI: Lucent Public License 1_02": "http://www.opensource.org/licenses/lucent1.02.php"
   "url_link_for_OSI: Microsoft Public License (Ms-PL)": "http://www.opensource.org/licenses/ms-pl.html"
   "url_link_for_OSI: Microsoft Reciprocal License (Ms-RL)": "http://www.opensource.org/licenses/ms-rl.html"
-  "url_link_for_OSI: MIT License": "http://www.openfoundry.org/Law-and-Policy/Licenses/MIT.html"
-  "url_link_for_OSI: Mozilla Public License 1.1 (MPL)": "http://www.openfoundry.org/Law-and-Policy/Licenses/MPL.html"
-  "url_link_for_OSI: NASA Open Source Agreement 1.3": "http://www.opensource.org/licenses/nasa1.3.php"
+  "url_link_for_OSI: MIT License": "http://www.openfoundry.org/licenses/34"
+  "url_link_for_OSI: Mozilla Public License 1_1 (MPL)": "http://www.openfoundry.org/licenses/33"
+  "url_link_for_OSI: NASA Open Source Agreement 1_3": "http://www.opensource.org/licenses/nasa1.3.php"
   "url_link_for_OSI: NTP License": "http://www.opensource.org/licenses/ntp-license.php"
   "url_link_for_OSI: Open Group Test Suite License": "http://www.opensource.org/licenses/opengroup.php"
-  "url_link_for_OSI: Open Software License": ""
-  "url_link_for_OSI: Qt Public License (QPL)": ""
-  "url_link_for_OSI: Simple Public License 2.0": "http://www.opensource.org/licenses/simpl-2.0.html"
+  "url_link_for_OSI: Open Software License": "http://www.openfoundry.org/licenses/756-osl"
+  "url_link_for_OSI: Qt Public License (QPL)": "http://www.openfoundry.org/licenses/757-qpl"
+  "url_link_for_OSI: Simple Public License 2_0": "http://www.opensource.org/licenses/simpl-2.0.html"
   "url_link_for_OSI: Sleepycat License": "http://www.opensource.org/licenses/sleepycat.php"
   "url_link_for_OSI: University of Illinois/NCSA Open Source License": "http://www.opensource.org/licenses/UoI-NCSA.php"
-  "url_link_for_OSI: zlib/libpng License": "http://www.openfoundry.org/Law-and-Policy/Licenses/zlib/libpng.html"
+  "url_link_for_OSI: zlib/libpng License": "http://www.openfoundry.org/licenses/36"
   "url_link_for_GNU Free Documentation License": "http://www.fsf.org/licensing/licenses/fdl.html"
-  "url_link_for_Creative Commons: Attribution Non-commercial (by-nc)": "http://creativecommons.org/licenses/by-nc/2.5/tw/"
-  "url_link_for_Creative Commons: Attribution No Derivatives (by-nd)": "http://creativecommons.org/licenses/by-nd/2.5/tw/"
-  "url_link_for_Creative Commons: Attribution Share Alike (by-sa)": "http://creativecommons.org/licenses/by-sa/2.5/tw/"
-  "url_link_for_Creative Commons: Attribution (by)": "http://creativecommons.org/licenses/by/2.5/tw/"
+  "url_link_for_Creative Commons: Attribution Non-commercial No Derivatives (by-nc-nd)": "http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"
+  "url_link_for_Creative Commons: Attribution Non-commercial Share Alike (by-nc-sa)": "http://creativecommons.org/licenses/by-nc-sa/3.0/tw/"
+  "url_link_for_Creative Commons: Attribution Non-commercial (by-nc)": "http://creativecommons.org/licenses/by-nc/3.0/tw/"
+  "url_link_for_Creative Commons: Attribution No Derivatives (by-nd)": "http://creativecommons.org/licenses/by-nd/3.0/tw/"
+  "url_link_for_Creative Commons: Attribution Share Alike (by-sa)": "http://creativecommons.org/licenses/by-sa/3.0/tw/"
+  "url_link_for_Creative Commons: Attribution (by)": "http://creativecommons.org/licenses/by/3.0/tw/"
   "Public Domain": "公共財(Public Domain)"
   "This project contains no code": "專案不包含程式碼"
   "Other licenses": "其他"
@@ -221,7 +231,7 @@ zh_TW:
   "The WebSVN can't support CVS. Please use ViewVC.": "該WebSVN不支援CVS，請使用ViewVC"
   "Basic Information": "基本資料"
   "Create Project": "建立專案"
-  "Project was successfully updated.": "專案已更新."
+  "Project was successfully updated": "專案已更新"
   "It may take 5 minutes for settings to take effect.": "請等待約五分鐘讓設定生效"
   "No Operation...": "操作未完成"
   "Move User to Group": "將使用者移到群組"
@@ -290,7 +300,7 @@ zh_TW:
   "Requestor": "請求者"
   "LastUpdatedBy": "最近更動"
   "menu_License Wizard": "授權指引/精靈"
-  "menu_LW_manual_link": "http://www.openfoundry.org/Law-and-Policy/License-Wizard/"
+  "menu_LW_manual_link": "http://www.openfoundry.org/license-wizard/"
   "License Wizard": "授權指引/精靈"
   "menu_LW_22_link": "http://swan.iis.sinica.edu.tw/LicenseWizard2/LicenseWizard.cgi"
   "menu_LW_32_link": "http://swan.iis.sinica.edu.tw/LicenseWizard/index.htm"
@@ -338,7 +348,7 @@ zh_TW:
   "How to Access": "存取方式"
   "NSC project": "國科會專案"
   "project_Basic_Information": "基本資料"
-  "project menu|Surveys": "專案下載者資訊"
+  "project menu|Surveys": "下載者資訊"
   "Projects Menu": "專案新聞"
   "Personal": "個人相關"
   "menu_My Messages": "我的站內訊息"
@@ -388,7 +398,6 @@ zh_TW:
   "Project Basic": "專案"
   "Kwiki": "WIKI"
   "Sympa": "通訊論壇"
-  "Subversion Access|Description": "本專案的版本控制檔案庫可利用下列 SVN 或 CVS 指令集取得"
   "Subversion Access|See More": "了解更多指令"
   "Anonymous CVS Access": "匿名CVS存取"
   "Subversion: Members Only": "Subversion: 僅允許專案成員"
@@ -557,9 +566,41 @@ zh_TW:
   "Post a Job": "提供接案消息"
   "Hi": "Hi"
   "Download Now": "下　　載"
+  "Update User Information Successfully.": "已成功更新使用者資料"
+  "Project Applied": "您的專案申請已送出，將在 72 小時內審核，當審核通過時，您會收到確認信。如有任何問題，請連絡我們："
+  Fileentity: "檔案"
   user_relation:
     no_partner: "目前該使用者並無專案夥伴"
     no_project: "目前該使用者並無專案"
+  Project:
+    status: "專案狀態"
+    name: "專案名稱"
+    summary: "專案摘要"
+    description: "專案說明"
+    creator: "專案建立者"
+    statusreason: "審核理由"
+    licensingdescription: "授權說明"
+    license: "授權條款"
+    contentlicense: "圖文授權"
+    contactinfo: "聯絡方式"
+    maturity: "專案成熟度"
+    platform: "作業環境"
+    programminglanguage: "程式語言"
+    intendedaudience: "專案適用對象"
+    rationale: "原由"
+    redirecturl: "專案首頁"
+    vcs: "版本控制系統"
+    vcsdescription: "版本控制系統描述"
+    project_counter: "專案下載數"
+    created_at: "建立時間"
+    updated_at: "更新時間"
+    updated_by: "更新者"
+    icon: "專案圖示"
+  repository:
+    use_svn_help: "本專案的版本控制檔案庫可利用下列 SVN 指令集取得:"
+    use_cvs_help: "本專案的版本控制檔案庫可利用下列 CVS 指令集取得:"
+  msg:
+    postrt_without_login: "您目前尚未登入系統。請登入您的帳號，或使用右上角註冊連結，建立一組新的帳號。如果，您想使用guest帳號來回報問題。請於回報單中，留下您的聯絡方式，如：電子郵件信箱。幫助專案開發者於問題解決後，告知您相關的訊息。"
 
 # -------------------------------------------------------------------
 # rails-I18n default translation
