--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -193,6 +193,7 @@ en:
   "No this release.": "No this release."
   "Add Successful": "Add Sucessful"
   "Edit": "Edit"
+  " Edit": " Edit"
   "Edit Successful": "Edit Successful"
   "Delete Successful": "Delete Successful"
   "OpenFoundry: News": "OpenFoundry News"
@@ -347,6 +348,7 @@ en:
   "How to Access": "How to Access"
   "NSC project": "NSC Project"
   "project_Basic_Information": "Basic Information"
+  "project_Basic_Info": "Basic Info"
   "project menu|Surveys": "Surveys"
   "Projects Menu": "Project name"
   "Personal": "Personal"
@@ -471,8 +473,8 @@ en:
   "Reset": "Reset"
   "Upload your picture": "Upload your picture"
   "Search Result": "Search Result"
-  "Registed Projects": "New Project"
-  "Registed Users": "New Project"
+  "Registed Projects": "Projects"
+  "Registed Users": "Users"
   "Description": "Description"
   "Tags": "Tags"
   "Detail": "Detail"
