--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -194,6 +194,7 @@ zh_TW:
   "No this release.": "無此項目"
   "Add Successful": "新增成功"
   "Edit": "修改"
+  " Edit": "修改"
   "Edit Successful": "編輯成功"
   "Delete Successful": "刪除成功"
   "OpenFoundry: News": "OpenFoundry: 新聞"
@@ -348,6 +349,7 @@ zh_TW:
   "How to Access": "存取方式"
   "NSC project": "國科會專案"
   "project_Basic_Information": "基本資料"
+  "project_Basic_Info": "基本資料"
   "project menu|Surveys": "下載者資訊"
   "Projects Menu": "專案新聞"
   "Personal": "個人相關"
