--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -334,7 +334,7 @@ en:
   "Settings": "Settings"
   "Logout": "Logout"
   "Login": "Login"
-  "Sign Up": "Sign Up"
+  "Sign Up": "Sign up"
   "Terms of Use Agreement": "Terms of Use Agreement"
   "I Agree": "I Agree"
   "I Do Not Agree": "I Do Not Agree"
