--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -46,6 +46,7 @@ zh_TW:
   "breadcrumb|openfoundry": "OpenFoundry"
   "breadcrumb|files": "files"
   "breadcrumb|report": "新增申請單"
+  "breadcrumb|new_release": "新增發佈消息"
   "User|Login": "帳號名稱"
   "User|Email": "電子郵件"
   "User|Realname": "真實姓名"
@@ -570,6 +571,7 @@ zh_TW:
   "Download Now": "下　　載"
   "Update User Information Successfully.": "已成功更新使用者資料"
   "Project Applied": "您的專案申請已送出，將在 72 小時內審核，當審核通過時，您會收到確認信。如有任何問題，請連絡我們："
+  "Description": "描述"
   Fileentity: "檔案"
   user_relation:
     no_partner: "目前該使用者並無專案夥伴"
