--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -477,7 +477,7 @@ zh_TW:
   "Reset": "重設"
   "Upload your picture": "選擇上傳的圖片"
   "Search Result": "搜尋結果"
-  "Registed Projects": "註冊專案"
+  "Registed Projects": "專案"
   "Registed Users": "使用者"
   "Description": "描述"
   "Tags": "標籤"
