[BugFix #37762] Update the search filter.

--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -449,7 +449,7 @@ zh_TW:
   "rt_task": "工作事項"
   "rt_feature": "新功能"
   "rt_enhancement": "改進"
-  "Content": "內容"
+  "Content": "文章"
   "People": "人才"
   "Community": "社群"
   "Law and Licenses": "法律源地"
