update label "Project Help Wanted": "Help Wanted"

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -258,7 +258,7 @@ en:
   "Survey|You have to fill the REQUIRED fileds.": "You have to fill the REQUIRED fileds."
   "Project Citations": "Citations"
   "Add Citation": "Add Citation"
-  "Project Help Wanted": "Created at"
+  "Project Help Wanted": "Help Wanted"
   "Add Job": "Add Job"
   "Release": "Release"
   "release_Edit": "Manage Releases"
