add "Upload a new document":

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
   "breadcrumb|lastupdatedby": "New Update"
   "breadcrumb|site_admin": "Site Admin"
   "breadcrumb|dashboard": "Dashboard"
+  "breadcrumb|dashboard2": "Dashboard"
   "breadcrumb|download": "Downloads"
   "breadcrumb|permission_edit": "Permission Edit"
   "breadcrumb|kwiki": "Kwiki"
@@ -475,6 +476,7 @@ en:
   "Upload": "Upload"
   "Reset": "Reset"
   "Upload your picture": "Upload your picture"
+  "Upload a new document": "Upload a new document"
   "Search Result": "Search Result"
   "Registed Projects": "Projects"
   "Registed Users": "Users"
