--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -476,6 +476,7 @@ zh_TW:
   "Upload": "上傳"
   "Reset": "重設"
   "Upload your picture": "選擇上傳的圖片"
+  "Upload a new document": "上傳新圖片"
   "Search Result": "搜尋結果"
   "Registed Projects": "專案"
   "Registed Users": "使用者"
