--- a/trunk/of/config/locales/zh_TW.yml
+++ b/trunk/of/config/locales/zh_TW.yml
@@ -303,6 +303,7 @@ zh_TW:
   "Creator": "建立者"
   "Requestor": "請求者"
   "LastUpdatedBy": "最近更動"
+  "Filter": "過濾器"
   "menu_License Wizard": "授權指引/精靈"
   "menu_LW_manual_link": "http://www.openfoundry.org/license-wizard/"
   "License Wizard": "授權指引/精靈"
