fix project Permission Control language translate

--- a/of/config/locales/en.yml
+++ b/of/config/locales/en.yml
@@ -247,9 +247,9 @@ en:
   "project_Member Control": "Member Control"
   "project_Permission Control": "Permission Control"
   "Permission was successfully updated": "Permission was successfully updated."
-  "Role was successfully created.": "Role was successfully created."
-  "Admin and Member can't be deleted.": "Admin and Member can't be deleted."
-  "Role was successfully deleted.": "Role was successfully deleted."
+  "Role was successfully created": "Role was successfully created."
+  "Admin and Member can't be deleted": "Admin and Member can't be deleted."
+  "Role was successfully deleted": "Role was successfully deleted."
   "Role id not found!": "Role id not found!"
   "OpenFoundry: New Projects Feed": "OpenFoundry News"
   "New projects on OpenFoundry": "OpenFoundry"
