--- a/of/config/locales/zh_TW.yml
+++ b/of/config/locales/zh_TW.yml
@@ -247,9 +247,9 @@ zh_TW:
   "project_Member Control": "成員管理"
   "project_Permission Control": "權限管理"
   "Permission was successfully updated": "權限修改已更新"
-  "Role was successfully created.": "群組已建立"
-  "Admin and Member can't be deleted.": "Admin與Member是預設群組, 不能移除"
-  "Role was successfully deleted.": "群組已移除"
+  "Role was successfully created": "群組已建立"
+  "Admin and Member can't be deleted": "Admin與Member是預設群組, 不能移除"
+  "Role was successfully deleted": "群組已移除"
   "Role id not found!": "查無此群組!"
   "OpenFoundry: New Projects Feed": "OpenFoundry: 新進專案Feed"
   "New projects on OpenFoundry": "OpenFoundry 的新進專案"
