--- a/trunk/of/config/locales/en.yml
+++ b/trunk/of/config/locales/en.yml
@@ -465,7 +465,7 @@ en:
   "Release Name": "Release name"
   "Release Date": "Release Date"
   "survey|Downloader Reviews": "Downloader Reviews"
-  "Downloads Hits": "Top Downloads"
+  "Downloads Hits": "Hits"
   "[Edit]": "Edit"
   "[Delete]": "Delete"
   "[Add release news]": "New Release"
