Fix I18n bug in project model and update translation language files.

--- a/of/config/locales/en.yml
+++ b/of/config/locales/en.yml
@@ -168,15 +168,15 @@ en:
   "This project uses a version control system at other site.": "This project uses a version control system at other site."
   "This project does not use any version control system.": "This project does not use any version control system."
   "System Error. Please contact the site administrator.": "System Error. Please contact the site administrator."
-  "Format|Project Name": "由英數字組成, 以英文字母開頭, 全小寫, 長度不超過15個字, 不短於3個字"
+  "Format|Project Name": "Between 3 to 15 characters in length, containing only letters and numbers"
   "This name is reserved by the system.": "This name is reserved by the system."
   "You have choosen too many licenses.": "You have choosen too many licenses"
   "You have choosen too many content licenses.": "You have choosen too many content licenses."
-  "Please choose at least one code license.": "Please choose at least one code license."
-  "Please choose at least one content license.": "Please choose at least one content license."
-  "You have to choose a code license.": "You have to choose a code license"
-  "Please choose at least one platform.": "Please choose at least one platform."
-  "Please choose at least one programming language.": "Please choose at least one programming language."
+  "Please choose at least one code license": "Please choose at least one code license."
+  "Please choose at least one content license": "Please choose at least one content license."
+  "You have to choose a code license": "You have to choose a code license"
+  "Please choose at least one platform": "Please choose at least one platform."
+  "Please choose at least one programming language": "Please choose at least one programming language."
   "Job|Subject": "Project name"
   "Job|Description": "Description"
   "Job|Requirement": "Requirement"
