--- a/trunk/of/config/locales/zh_TW.yml
+++ b/trunk/of/config/locales/zh_TW.yml
@@ -172,11 +172,11 @@ zh_TW:
   "This name is reserved by the system.": "抱歉, 此名字已被系統保留"
   "You have choosen too many licenses.": "您選擇了太多種程式碼授權方式"
   "You have choosen too many content licenses.": "您選擇了太多種圖文授權方式"
-  "Please choose at least one code license.": "請選擇至少一種程式碼授權方式"
-  "Please choose at least one content license.": "請選擇至少一種圖文授權方式"
-  "You have to choose a code license.": "請選擇程式碼授權方式"
-  "Please choose at least one platform.": "請選擇至少一種作業環境"
-  "Please choose at least one programming language.": "請選擇至少一種程式語言"
+  "Please choose at least one code license": "請選擇至少一種程式碼授權方式"
+  "Please choose at least one content license": "請選擇至少一種圖文授權方式"
+  "You have to choose a code license": "請選擇程式碼授權方式"
+  "Please choose at least one platform": "請選擇至少一種作業環境"
+  "Please choose at least one programming language": "請選擇至少一種程式語言"
   "Job|Subject": "標題"
   "Job|Description": "描述"
   "Job|Requirement": "技能需求"
