--- a/of/config/locales/zh_TW.yml
+++ b/of/config/locales/zh_TW.yml
@@ -1,8 +1,8 @@
 zh_TW:
   "Project Releases": "專案釋出"
   "user": "使用者"
-  "Project Listing": "專案列表"
-  "Project Category": "專案分類"
+  "Project Listing": "專案"
+  "Project Category": "專案列表"
   "Project News": "專案新聞"
   "Help Wanted": "徵求伙伴"
   "Citations": "引用資訊"
@@ -18,37 +18,38 @@ zh_TW:
   "dashboard": "專案管理"
   "required_icon": "必填"
   "breadcrumb|show": "顯示"
-  "breadcrumb|applied": "Applied"
+  "breadcrumb|applied": "核可"
   "breadcrumb|how_to_upload": "如何上傳檔案?"
   "breadcrumb|not_found": "找無此頁"
   "breadcrumb|rescue": "Rescue"
-  "breadcrumb|vcs_access": "版本控制存取方式"
-  "breadcrumb|my_projects": "我參與的專案"
-  "breadcrumb|login": "登入"
-  "breadcrumb|new": "新增"
-  "breadcrumb|home": "我的首頁"
-  "breadcrumb|edit": "編輯"
-  "breadcrumb|owner": "所有者"
-  "breadcrumb|creator": "建立者"
-  "breadcrumb|requestor": "請求者"
-  "breadcrumb|lastupdatedby": "最近更動"
-  "breadcrumb|site_admin": "站台管理"
-  "breadcrumb|dashboard": "專案管理"
-  "breadcrumb|download": "下載區"
-  "breadcrumb|permission_edit": "權限管理"
-  "breadcrumb|kwiki": "共同筆記"
-  "breadcrumb|viewvc": "版本控制"
-  "breadcrumb|websvn": "版本控制"
-  "breadcrumb|sympa": "通訊論壇"
-  "breadcrumb|member_edit": "成員管理"
-  "breadcrumb|reviews": "下載者資料"
-  "breadcrumb|search": "搜尋"
-  "breadcrumb|openfoundry": "OpenFoundry"
-  "breadcrumb|files": "files"
-  "breadcrumb|report": "新增申請單"
-  "breadcrumb|new_release": "新增發佈消息"
+  "breadcrumb|vcs_access": "VCS Access"
+  "breadcrumb|my_projects": "My Projects"
+  "breadcrumb|login": "Login"
+  "breadcrumb|new": "New"
+  "breadcrumb|home": "Homepage"
+  "breadcrumb|edit": "Edit"
+  "breadcrumb|owner": "Owner"
+  "breadcrumb|creator": "Creator"
+  "breadcrumb|requestor": "Requestor"
+  "breadcrumb|lastupdatedby": "New Update"
+  "breadcrumb|site_admin": "Site Admin"
+  "breadcrumb|dashboard": "Dashboard"
+  "breadcrumb|dashboard2": "Dashboard"
+  "breadcrumb|download": "Downloads"
+  "breadcrumb|permission_edit": "Permission Edit"
+  "breadcrumb|kwiki": "Kwiki"
+  "breadcrumb|viewvc": "ViewVC"
+  "breadcrumb|websvn": "WebSVN"
+  "breadcrumb|sympa": "Sympa"
+  "breadcrumb|member_edit": "Member Control"
+  "breadcrumb|reviews": "Survey"
+  "breadcrumb|search": "Search"
+  "breadcrumb|openfoundry": "Projects"
+  "breadcrumb|files": "Files"
+  "breadcrumb|new_release": "New Release"
+  "breadcrumb|nscreports": "nscreports"
   "breadcrumb|nsc" : "nsc"
-  "breadcrumb|nscreports" : "nscreports"
+  "breadcrumb|list" : "專案列表"
   "User|Login": "帳號名稱"
   "User|Email": "電子郵件"
   "User|Realname": "真實姓名"
@@ -110,6 +111,8 @@ zh_TW:
   "Project|Vcsdescription": "版本控制系統描述"
   "Project|Creator": "專案建立者"
   "Project|Created at": "建立日期"
+  "Project|Category": "專案分類"
+  "Project|Tags": "標籤"
   "IDEA": "概念(Idea)"
   "PREALPHA": "雛形(Pre-Alpha)"
   "ALPHA": "測試(Alpha)"
@@ -192,7 +195,7 @@ zh_TW:
   "Announcements": "系統公告"
   "News": "新聞"
   "OpenFoundry News": "OpenFoundry新聞"
-  "project_News": "專案新聞"
+  "project_News": "專案公告"
   "Add News": "新增新聞"
   "No this release.": "無此項目"
   "Add Successful": "新增成功"
@@ -236,7 +239,7 @@ zh_TW:
   "Basic Information": "基本資料"
   "Create Project": "建立專案"
   "Project was successfully updated": "專案已更新"
-  "It may take 5 minutes for settings to take effect.": "請等待約五分鐘讓設定生效"
+  "It may take 5 minutes for settings to take effect": "您的設定會在五分鐘後生效"
   "No Operation...": "操作未完成"
   "Move User to Group": "將使用者移到群組"
   "Add User into Group": "加入使用者到群組"
@@ -321,7 +324,7 @@ zh_TW:
   "menu_Contact Us": "連絡我們"
   "Bug Report": "問題回報"
   "OpenFoundry": "OpenFoundry"
-  "NSC Project": "NSC專案"
+  "NSC Project": "國科會專案"
   "menu_Site Admin": "站台管理"
   "Project List": "專案列表"
   "Translations": "網站翻譯"
@@ -329,7 +332,10 @@ zh_TW:
   "Tag Cloud": "標籤雲"
   "Please keyin according the image": "請依照圖示內容輸入驗證碼"
   "search": "搜尋"
+  "All time most popular tags": "熱門標籤"
   "Advanced Options": "進階搜尋"
+  "No record": "很抱歉，找不到您要的專案，請重新輸入您要的關鍵字。"
+  "Please input some keyword": "目前並無任何搜尋結果，請輸入關鍵字或選擇您想要篩選的專案元素搜尋。"
   "Search in Class": "搜尋類型"
   "Search Include ALL of the List": "包含全部內容(空白隔開)"
   "Search Include ANY of the List": "包含任一內容(空白隔開)"
@@ -465,6 +471,7 @@ zh_TW:
   "Release Name": "名稱"
   "Release Date": "釋出時間"
   "survey|Downloader Reviews": "下載者資訊"
+  "survey|Toggle Description": "顯示/隱藏詳細資訊"
   "Downloads Hits": "下載次數 "
   "[Edit]": "修改"
   "[Delete]": "刪除"
@@ -477,7 +484,7 @@ zh_TW:
   "Upload": "上傳"
   "Reset": "重設"
   "Upload your picture": "選擇上傳的圖片"
-  "Upload a new document": "上傳新檔案"
+  "Upload a new document": "上傳新文件"
   "Search Result": "搜尋結果"
   "Registed Projects": "專案"
   "Registed Users": "使用者"
@@ -609,6 +616,25 @@ zh_TW:
     use_cvs_help: "本專案的版本控制檔案庫可利用下列 CVS 指令集取得:"
   msg:
     postrt_without_login: "您目前尚未登入系統。請登入您的帳號，或使用右上角註冊連結，建立一組新的帳號。如果，您想使用guest帳號來回報問題。請於回報單中，留下您的聯絡方式，如：電子郵件信箱。幫助專案開發者於問題解決後，告知您相關的訊息。"
+  Menu:
+    Category: "專案列表"
+  Option:
+    Select_Category: "選擇分類"
+    All_Category: "所有分類"
+  CreateHelp:
+    Project_Category: "請選擇適合專案的分類，如屬於多重分類的話，請選擇一個主要的分類，其餘的可透過標籤加強您專案的屬性。"
+    Project_Tags: "以逗號分隔，可下多筆(Tag)，此欄位可協助使用者快速找到您的專案，愈精確愈好。"
+  Msg:
+    Tag_Duplicated: "此標籤已使用"
+    Limited_Input: "請勿使用中文或特殊字元"
+    Click_Remove: "如欲刪除標籤，可直接點擊標籤移除"
+    New_Added_Tag: "新自訂標籤"
+    Send_A_Tag: "此專案的標籤：例如：Android, Ruby, Medication Box"
+  Text:
+    NSC_Project: "國科會專案"
+    New_Category: "建議新分類?"
+    OK: "確認"
+
 
 # -------------------------------------------------------------------
 # rails-I18n default translation
